--- a/package.json
+++ b/package.json
@@ -8,40 +8,62 @@
     "@everapi/currencyapi-js": "^1.0.6",
     "@fontsource/public-sans": "^5.0.3",
     "@fontsource/roboto": "^5.0.3",
-    "@mui/icons-material": "^5.11.16",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@material-ui/core": "^4.12.4",
+    "@moralisweb3/common-evm-utils": "^2.22.4",
+    "@mui/icons-material": "^5.14.0",
     "@mui/joy": "^5.0.0-alpha.85",
-    "@mui/material": "^5.13.6",
+    "@mui/material": "^5.14.0",
     "@mui/styled-engine-sc": "^5.12.0",
     "@reduxjs/toolkit": "^1.8.1",
+    "@rooks/use-window-size": "^4.11.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@vitejs/plugin-react": "^4.0.3",
+    "api": "^6.1.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.1.3",
+    "crypto": "^1.0.1",
     "ethers": "^5.6.2",
     "firebase": "^9.23.0",
     "framer-motion": "^6.2.9",
+    "history": "^5.3.0",
     "moment": "^2.29.3",
+    "moralis": "^2.22.4",
+    "postcss": "^8.4.26",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.3",
+    "react-cool-form": "^0.4.1",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.10.1",
+    "react-multistep": "^5.5.8",
     "react-qr-code": "^2.0.11",
     "react-redux": "^7.2.8",
+    "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
     "serve": "^14.2.0",
+    "styled-breakpoints": "^12.1.1",
     "styled-components": "^5.3.11",
+    "tailwindcss": "^3.3.3",
+    "tron-tx-decoder": "^2.0.2",
+    "tronweb": "^5.3.0",
     "viem": "^1.2.9",
+    "vite": "^4.4.3",
     "wagmi": "^1.3.5",
     "web-vitals": "^2.1.4",
     "web3": "^4.0.2",
     "web3modal": "^1.9.6"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -52,14 +74,29 @@
   },
   "browserslist": {
     "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
+      "chrome >= 67",
+      "edge >= 79",
+      "firefox >= 68",
+      "opera >= 54",
+      "safari >= 14"
     ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
+    "react-app-rewired": "^2.2.1",
+    "sass": "^1.63.6",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.1"
   }
 }
