--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@everapi/currencyapi-js": "^1.0.6",
@@ -13,11 +14,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@moralisweb3/common-evm-utils": "^2.22.4",
     "@mui/icons-material": "^5.14.0",
     "@mui/joy": "^5.0.0-alpha.85",
     "@mui/material": "^5.14.0",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@react-email/render": "^0.0.7",
     "@reduxjs/toolkit": "^1.8.1",
     "@rooks/use-window-size": "^4.11.2",
     "@testing-library/jest-dom": "^5.16.4",
@@ -26,27 +29,34 @@
     "@vitejs/plugin-react": "^4.0.3",
     "api": "^6.1.0",
     "axios": "^1.4.0",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.3.1",
     "crypto": "^1.0.1",
+    "email-js": "^2.0.2",
+    "emailjs": "^4.0.2",
     "ethers": "^5.6.2",
     "firebase": "^9.23.0",
+    "firebase-tools": "^12.4.8",
     "framer-motion": "^6.2.9",
     "history": "^5.3.0",
     "moment": "^2.29.3",
     "moralis": "^2.22.4",
+    "nodemailer": "^6.9.4",
     "postcss": "^8.4.26",
     "react": "^18.0.0",
-    "react-bootstrap": "^2.2.3",
+    "react-bootstrap": "^2.8.0",
     "react-cool-form": "^0.4.1",
     "react-dom": "^18.0.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.10.1",
     "react-multistep": "^5.5.8",
     "react-qr-code": "^2.0.11",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.0",
+    "react-select": "^5.7.4",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
+    "rsuite": "^5.38.0",
     "serve": "^14.2.0",
     "styled-breakpoints": "^12.1.1",
     "styled-components": "^5.3.11",
@@ -56,6 +66,7 @@
     "viem": "^1.2.9",
     "vite": "^4.4.3",
     "wagmi": "^1.3.5",
+    "wallet-address-validator": "^0.2.4",
     "web-vitals": "^2.1.4",
     "web3": "^4.0.2",
     "web3modal": "^1.9.6"
@@ -94,7 +105,7 @@
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
     "react-app-rewired": "^2.2.1",
-    "sass": "^1.63.6",
+    "sass": "^1.65.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "url": "^0.11.1"
